--- a/views/books/new.erb
+++ b/views/books/new.erb
@@ -1,31 +1,33 @@
-<h1>This is books new page</h1>
+<div class="container">
+  <h1>This is books new page</h1>
 
-<form class="" action="/books" method="post">
-  <label for="">Book Title</label>
-  <input required type="text" name="title">
+  <form class="" action="/books" method="post">
+    <label for="">Book Title</label>
+    <input required type="text" name="title">
 
-  <label for="">Book genre</label>
-  <select required name="genre">
-    <% @genres.each do |x| %>
-      <option value="<%= x %>"><%= x %></option>
-    <% end %>
-  </select>
+    <label for="">Book genre</label>
+    <select required name="genre">
+      <% @genres.each do |x| %>
+        <option value="<%= x %>"><%= x %></option>
+      <% end %>
+    </select>
 
-  <label for="">Book description</label>
-  <input required type="text" name="description">
+    <label for="">Book description</label>
+    <input required type="text" name="description">
 
-  <label for="">Cover Url</label>
-  <input required type="text" name="cover">
+    <label for="">Cover Url</label>
+    <input required type="text" name="cover">
 
-  <label for="">year</label>
-  <input required type="number" max='2019' name="year">
+    <label for="">year</label>
+    <input required type="number" max='2019' name="year">
 
-  <label for="">author</label>
-  <select required name="author_id">
-    <% for author in @authors %>
-    <option value="<%= author.id %>"><%= author.pretty_name %></option>
-    <% end %>
-  </select>
+    <label for="">author</label>
+    <select required name="author_id">
+      <% for author in @authors %>
+      <option value="<%= author.id %>"><%= author.pretty_name %></option>
+      <% end %>
+    </select>
 
-  <input type="submit" value="Create Book">
-</form>
+    <input type="submit" value="Create Book">
+  </form>
+</div>
