--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,20 @@
-<h1>This is the home page</h1>
+<div class="container">
+  <h1>Book Buddies</h1>
 
+  <div >
+    <img id="book_img" src="https://images.unsplash.com/photo-1484415063229-3d6335668531?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1576&q=80" alt="">
+  </div>
 
-<p>for a book shop</p>
+  <div class="container">
+    <h1>About</h1>
+
+    <p>Bacon ipsum dolor amet ball tip kevin meatball, rump bacon biltong jowl kielbasa t-bone fatback tenderloin chuck. Landjaeger rump pig biltong bacon short loin meatball kielbasa pork belly chicken chuck jerky filet mignon doner. Ribeye sirloin sausage porchetta ham hock buffalo. Pork tenderloin capicola filet mignon frankfurter. Jerky boudin porchetta, bresaola tail frankfurter sausage corned beef burgdoggen tongue leberkas ball tip. Andouille beef drumstick tri-tip corned beef ball tip sausage ground round kevin ham.
+    </p>
+    <p>Jowl turducken tri-tip shoulder. Meatball jerky kevin tongue bresaola. Ribeye drumstick sausage pork. Kevin pastrami picanha bresaola pancetta, meatball corned beef biltong.
+    </p>
+    <p>Strip steak filet mignon beef ribs tongue. Tongue shoulder picanha frankfurter bresaola sausage swine pancetta tri-tip. T-bone short loin landjaeger turducken pastrami ham bresaola. Ground round alcatra pork loin ribeye pork chop doner. Pig turkey fatback corned beef shoulder.
+    </p>
+    <p>Meatball landjaeger alcatra rump. Chuck drumstick andouille cupim pork loin pork belly beef ribs pork chop. Turducken bresaola pork belly strip steak. Ham hock ham chicken, pork belly tri-tip sirloin prosciutto doner shank andouille pork. Bacon shank strip steak, rump tongue spare ribs short loin kielbasa turducken.
+  </p>
+  </div>
+</div>
