--- a/views/authors/index.erb
+++ b/views/authors/index.erb
@@ -1,21 +1,29 @@
-<h1>This is the authors index page</h1>
+<div class="container">
+  <h1>List of Authors</h1>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Books</th>
-  </tr>
-  <% for author in @authors %>
-    <% books = author.books %>
-    <tr>
-      <th><a href="/authors/<%= author.id %>"><%= author.pretty_name %></a></th>
-      <th class='books_authors'>
-        <% for book in books %>
-          <span><%= book.title %></span>
-        <% end %>
-      </th>
-    </tr>
-  <% end %>
-</table>
+  <div class="btn">
+    <a class="" href="/authors/new">Create new author</a>
+  </div>
 
-<a href="/authors/new">Create new author</a>
+  <table>
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Books</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% for author in @authors %>
+        <% books = author.books %>
+        <tr>
+          <th><a href="/authors/<%= author.id %>"><%= author.pretty_name %></a></th>
+          <th class='books_authors'>
+            <% for book in books %>
+              <span><a href="/books/<%= book.id %>"><%= book.title %></a></span>
+            <% end %>
+          </th>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
