--- a/views/authors/new.erb
+++ b/views/authors/new.erb
@@ -1,27 +1,29 @@
-<h1>This is books new page</h1>
+<div class="container">
+  <h1>This is books new page</h1>
 
-<form class="" action="/authors" method="post">
-  <label for="">First Name</label>
-  <input required type="text" name="first_name">
+  <form class="" action="/authors" method="post">
+    <label for="">First Name</label>
+    <input required type="text" name="first_name">
 
-  <label for="">Last Name</label>
-  <input required type="text" name="last_name">
+    <label for="">Last Name</label>
+    <input required type="text" name="last_name">
 
-  <label for="">Profile Picture Url</label>
-  <input required type="text" name="profile_img">
+    <label for="">Profile Picture Url</label>
+    <input required type="text" name="profile_img">
 
-  <label for="">Date of Birth</label>
-  <input required type="num" name="date_of_birth" placeholder="ddmmyyyy">
+    <label for="">Date of Birth</label>
+    <input required type="num" name="date_of_birth" placeholder="ddmmyyyy">
 
-  <label for="">Description</label>
-  <textarea required name="description" rows="1" cols="40"></textarea>
+    <label for="">Description</label>
+    <textarea required name="description" rows="1" cols="40"></textarea>
 
-  <label for="">Book</label>
-  <select required name="book_id">
-    <% for book in @books %>
-    <option value="<%= book.id %>"><%= book.title %></option>
-    <% end %>
-  </select>
+    <label for="">Book</label>
+    <select required name="book_id">
+      <% for book in @books %>
+      <option value="<%= book.id %>"><%= book.title %></option>
+      <% end %>
+    </select>
 
-  <input type="submit" value="Add Author">
-</form>
+    <input type="submit" value="Add Author">
+  </form>
+</div>
