--- a/views/books/index.erb
+++ b/views/books/index.erb
@@ -1,23 +1,29 @@
-<h1>This is books index page</h1>
-
-<table >
-  <tr>
-    <th>Title</th>
-    <th>Year of publish</th>
-    <th>Authors</th>
-  </tr>
-    <% for book in @books %>
-      <% authors = book.authors %>
-        <tr>
-          <th><a href="/books/<%= book.id %>"><%= book.title %></a></th>
-          <th><%= book.year %></th>
-          <th class="books_authors">
-            <% for author in authors %>
-                <span><%= author.pretty_name %></span>
-            <% end %>
-          </th>
-        </tr>
-    <% end %>
-</table>
-
-<a href="/books/new">Create New Book</a>
+<div class="container">
+  <h1>List of Books</h1>
+  <div class="btn">
+    <a href="/books/new">Create New Book</a>
+  </div>
+  <table >
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Year of publish</th>
+        <th>Authors</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% for book in @books %>
+        <% authors = book.authors %>
+          <tr>
+            <th><a href="/books/<%= book.id %>"><%= book.title %></a></th>
+            <th><%= book.year %></th>
+            <th class="books_authors">
+              <% for author in authors %>
+                  <span><a href="/authors/<%= author.id %>"><%= author.pretty_name %></a></span>
+              <% end %>
+            </th>
+          </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
