--- a/views/books/show.erb
+++ b/views/books/show.erb
@@ -1,30 +1,42 @@
-<h1>This is a show page for <%= @book.title %></h1>
+<div class="container">
+  <h1><%= @book.title %></h1>
 
 
-<ul>
-  <li>Book title: <%= @book.title %></li>
-  <li>Book genre: <%= @book.genre %></li>
-  <li>Book description: <%= @book.description %></li>
-  <li>Year of publish: <%= @book.year %></li>
-</ul>
-<img src="<%= @book.cover %>" alt="">
-
-<p>Authors:</p>
   <ul>
-    <% if @authors.length != 0 %>
-      <% for author in @authors %>
-        <li><a href="/authors/<%= author.id %>">Name: <%= author.pretty_name %></a></li>
-        <form class="" action="publication/<%= author.id %>/<%= @book.id %>/delete" method="post">
-          <input type="submit" name="" value="Delete Author">
-        </form>
-      <% end %>
-    <% else %>
-      <p>No Authors for this book</p>
-    <% end %>
+    <li>Book title: <%= @book.title %></li>
+    <li>Book genre: <%= @book.genre %></li>
+    <li>Book description: <%= @book.description %></li>
+    <li>Year of publish: <%= @book.year %></li>
   </ul>
+  <img src="<%= @book.cover %>" alt="">
 
-<a href="/books/<%= @book.id %>/edit">Edit Book</a>
-<a href="/publication/<%= @book.id %>/add_author">Add Author</a>
-<form class="" action="/books/<%= @book.id %>/delete" method="post">
-  <input type="submit" name="" value="Delete Book">
-</form>
+  <p>Authors:</p>
+    <ul>
+      <% if @authors.length != 0 %>
+        <% for author in @authors %>
+          <li><a href="/authors/<%= author.id %>">Name: <%= author.pretty_name %></a></li>
+          <form class="" action="publication/<%= author.id %>/<%= @book.id %>/delete" method="post">
+            <input type="submit" name="" value="Delete Author">
+          </form>
+        <% end %>
+      <% else %>
+        <p>No Authors for this book</p>
+      <% end %>
+    </ul>
+
+    <div class="search_bar">
+      <div class="btn">
+        <a href="/books/<%= @book.id %>/edit">Edit Book</a>
+      </div>
+      <div class="btn">
+        <a href="/publication/<%= @book.id %>/add_author">Add Author</a>
+      </div>
+        <form class="" action="/books/<%= @book.id %>/delete" method="post">
+          <input type="submit" name="" value="Delete Book">
+        </form>
+    </div>
+
+
+
+
+</div>
