--- a/views/stock/new.erb
+++ b/views/stock/new.erb
@@ -1,23 +1,34 @@
-<h1>new stock item page</h1>
+<h1>Create new item</h1>
 
 <form class="" action="/stock" method="post">
-  <label for="">Book</label>
-  <select required class="" name="book_id">
-    <% for book in @books %>
-      <% if @book_ids.include?(book.id.to_s) == false %>
-        <option value="<%= book.id %>"><%= book.title %></option>
+
+  <p>
+    <label for="">Book</label>
+    <select required class="" name="book_id">
+      <% for book in @books %>
+        <% if @book_ids.include?(book.id.to_s) == false %>
+          <option value="<%= book.id %>"><%= book.title %></option>
+        <% end %>
       <% end %>
-    <% end %>
-  </select>
+    </select>
+  </p>
 
-  <label for="">Quantity</label>
-  <input required type="number" min="0" name="quantity" value="">
+  <p>
+    <label for="">Quantity</label>
+    <input required type="number" min="0" name="quantity" value="">
+  </p>
 
-  <label for="">Buying Cost</label>
-  <input required type="number" min="0" step='0.25' name="buying_cost" value="">
+  <p>
+    <label for="">Buying Cost</label>
+    <input required type="number" min="0" step='0.25' name="buying_cost" value="">
+  </p>
 
-  <label for="">Selling Price</label>
-  <input required type="number" min="0" step='0.25' name="selling_price" value="">
+  <p>
+    <label for="">Selling Price</label>
+    <input required type="number" min="0" step='0.25' name="selling_price" value="">
+  </p>
 
-  <input required type="submit" value="Create Book">
+  <p>
+    <input required type="submit" value="Create Book">
+  </p>
 </form>
