changed links style

--- a/views/stock/index.erb
+++ b/views/stock/index.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <h1>Stock list</h1>
   <div class="search_bar">
-    <a href="/stock/new">Create new item</a>
+    <div class="btn">
+      <a href="/stock/new">Create new item</a>
+    </div>
     <form action="/stock/sorted_by_author" method="post">
       <select class="" name="author_id">
         <% for author in @authors %>
@@ -38,6 +40,7 @@
                 <tr>
                   <th></th>
                   <th><a href="/books/<%= book.id %>"><%= book.title %></a></th>
+
                   <% if item.check_quantity_low %>
                   <th style="background-color: red;"><%= item.quantity %></th>
                   <% else %>
@@ -48,7 +51,7 @@
                   <th>£<%= item.markup %></th>
                   <th>
                     <form class="" action="/stock/<%= item.id %>" method="post">
-                      <input type="number" name="quantity" value="<%= item.quantity %>">
+                      <input type="number" min='0' name="quantity" value="<%= item.quantity %>">
                       <input type="submit" name="" value="Update Quantity">
                     </form>
                   </th>
