--- a/views/stock/index.erb
+++ b/views/stock/index.erb
@@ -21,9 +21,9 @@
         <th>Genre</th>
         <th>Book Title</th>
         <th>Quantity</th>
-        <th>Buyin cost</th>
+        <th>Buying cost</th>
         <th>Selling price</th>
-        <th>Maruk value</th>
+        <th>Markup value</th>
         <th>Change Quantity</th>
         <th>Delete item</th>
       </tr>
